New in SVN (will be 0.12)
-------------------------

* Fixed issue 134: entities were replaced in interpreted roles 
  (not needed)
* Support for aafigure (http://launchpad.net/aafigure)

New in 0.11
-----------

* Degrade more gracefully when one or more wordaxe hyphenators are
  broken (currently DWC is the broken one)
* Fixed issue 132: in some cases, with user-defined fontAlias, bold and
  italic would get confused (getting italic instead of bold in inline
  markup, for instance).
* New stylesheet no-compact-lists to make lists... less compact
* SVG images now handle % as a width unit correctly.
* Implemented issue 127: support images in PDF format. Right now they 
  are rasterized, so it's not ideal. Perhaps something better will come up
  later.
* Fixed issue 129: make it work around a prblem with KeepTogether in RL 2.1
  it probably makes the output look worse in some cases when using that.
  RL 2.1 is not really supported, so added a warning.
* Fixed issue 130: use os.pathsep instead of ":" since ":" in windows is used
  in disk names (and we still pay for DOS idiocy, in 2009)
* Fixed issue 128: headings level 3+ all looked the same
* Ugly bugfix for Issue 126: crashes when using images in header + TOC
* New tstyles section in the stylesheet provides more configurable list layouts 
  and more powerful table styling.
* Better syntax highlighting (supports bold/italic)
* Workaround for issue 103 so you can use borderPadding as a list (but it will look wrong
  if you are using wordaxe <= 0.3.2) 
* Added fieldvalue style for field lists
* Added optionlist tstyle, for option lists
* Added collection of utility stylesheets and documented it
* Improved command line parsing and stylesheet loading (guess
  extension like latest rst2latex does)
* Fixed Issue 67: completely new list layouting code
* Fixed Issue 116: crashes caused by huge images
* Better support for %width in images, n2ow it's % of the container frame's
  width, not of the text area.